# JuliaPractice

./: NEWS.md  README.md  hello.jl  practice_00.jl  practice_01.jl  practice_02.jl  practice_02b.jl  practice_03.jl  practice_03b.jl  practice_05.jl  practice_07.jl  practice_08.jl  practice_09.jl  practice_10.jl  practice_10b.jl
data/: demo.html  elements.csv  elements_with_header.csv
extra/c/: CMakeLists.txt  main.c
extra/c/lib/: CMakeLists.txt
extra/c/lib/include/: calc.h  display.h  hello.h
extra/c/lib/src/: calc.c  display.c  hello.c
extra/c/script/: go
extra/f/: CMakeLists.txt  main.f90
extra/f/lib/: CMakeLists.txt
extra/f/lib/src/mod/: eins.f90  zwei.f90
extra/f/lib/src/sub/: display.f90
lib/libj/: Element.jl  ElementB.jl  TestFive.jl  TestFive_c.jl  Testfour.jl  Testfour_c.jl
lib/libp/: testone.py  testtwo.py
src/: practice_01.jl  practice_01b.jl  practice_02.jl  practice_02b.jl  practice_03.jl  practice_03b.jl  practice_04.jl  practice_04b.jl  practice_05.jl  practice_05b.jl  practice_06.jl  practice_06b.jl  practice_06c.jl  practice_07.jl  practice_07b.jl  practice_07c.jl  practice_08.jl  practice_08c.jl  practice_09.jl  practice_09c.jl  practice_10.jl  practice_10b.jl  practice_11b.jl  practice_12b.jl  practice_13b.jl  practice_13c.jl
